WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179877
Fix potential thread safety issue in generateThreadSafeObjectIdentifier()
https://bugs.webkit.org/show_bug.cgi?id=179877
Summary
Fix potential thread safety issue in generateThreadSafeObjectIdentifier()
Chris Dumez
Reported
2017-11-19 10:26:06 PST
Fix potential thread safety issue in generateThreadSafeObjectIdentifier().
Attachments
Patch
(1.86 KB, patch)
2017-11-19 10:32 PST
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-11-19 10:32:55 PST
Created
attachment 327347
[details]
Patch
WebKit Commit Bot
Comment 2
2017-11-19 13:56:20 PST
Comment on
attachment 327347
[details]
Patch Clearing flags on attachment: 327347 Committed
r225034
: <
https://trac.webkit.org/changeset/225034
>
WebKit Commit Bot
Comment 3
2017-11-19 13:56:22 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-11-19 13:57:39 PST
<
rdar://problem/35638586
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug