Fix potential thread safety issue in generateThreadSafeObjectIdentifier() https://bugs.webkit.org/show_bug.cgi?id=179877

Reviewed by Sam Weinig.

Fix potential thread safety issue in generateThreadSafeObjectIdentifier().
Protect std::atomic initialization with an std::call_once() given that we
build with --fno-threadsafe-statics.

* wtf/ObjectIdentifier.h:
(WTF::generateThreadSafeObjectIdentifier):


Canonical link: https://commits.webkit.org/195903@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225034 268f45cc-cd09-0410-ab3c-d52691b4dbfc